--- a/FRONTEND/src/app/module/cv/candidate-profile/candidate-skills/candidate-skills.component.html
+++ b/FRONTEND/src/app/module/cv/candidate-profile/candidate-skills/candidate-skills.component.html
@@ -2,7 +2,9 @@
 	<div class="card shadow-sm">
 		<p class="h4 pt-4 ps-3">Skills</p>
 		<div class="position-absolute top-4 end-0 p-4">
-			<i class="fa-regular fa-pen-to-square text-danger"></i>
+			<a mat-button (click)="onClickEdit()">
+				<i class="fa-regular fa-pen-to-square text-danger"></i>
+			</a>
 		</div>
 		<mat-divider></mat-divider>
 		<!-- list skills -->
