--- a/FrontEnd/src/app/module/cv/cv-manage/cv-manage.component.html
+++ b/FrontEnd/src/app/module/cv/cv-manage/cv-manage.component.html
@@ -4,27 +4,17 @@
 <p class="h1 text-center py-3">Your CVs</p>
 
 <div class="card-container d-block">
-	@for (cv of listCvsOfCandidate; track $index) {
-	<div class="card p-3">
-		<div class="card">
-			<div class="card-header">
-				<!-- pdf-iframe.component.html -->
-				<iframe style="width: 100%; height: 100%" frameborder="0"></iframe>
-				<h5 class="card-title">{{ cv.cvName }}</h5>
-				<h6 class="card-subtitle">
-					<a href="{{ cv.cvPdf }}">
-						{{ cv.cvPdf }}
-					</a>
-				</h6>
-			</div>
-			<div>
-				<p class="card-text">{{ cv.aboutMe }}</p>
-			</div>
-			<div>
-				<button class="btn btn-primary">VIEW</button>
-				<button class="btn btn-secondary">DELETE CV</button>
+	<div class="row">
+		<div class="col-lg-4 col-md-6 mb-4" *ngFor="let cv of listCvsOfCandidate">
+			<div class="card">
+				<img class="card-img-top" src="{{ cv.cvPdf }}" alt="CV preview" />
+				<div class="card-body">
+					<h5 class="card-title">{{ cv.cvName }}</h5>
+					<p class="card-text">{{ cv.aboutMe }}</p>
+					<a href="#" class="btn btn-primary" (click)="onClickView(cv.cvid)">View CV</a>
+					<a href="#" class="btn btn-danger" (click)="onClickDelete(cv.cvPdf)">Delete CV</a>
+				</div>
 			</div>
 		</div>
 	</div>
-	}
 </div>
