--- a/FRONTEND/src/app/module/reccer/interview/interview.component.html
+++ b/FRONTEND/src/app/module/reccer/interview/interview.component.html
@@ -227,6 +227,9 @@
 						}
 						}
 					</div>
+					@if (item.notes) {
+					<div><i class="bi bi-sticky-fill fs-5"></i> Notes: {{item.notes}}</div>
+					}
 				</div>
 				}
 			</div>
