--- a/FRONTEND/src/app/module/reccer/event/event.component.css
+++ b/FRONTEND/src/app/module/reccer/event/event.component.css
@@ -1,10 +1,36 @@
-.image-container {
-	position: relative;
-	display: inline-block;
+.custom-formfield {
+	background-color: #f1f1f1;
+	padding: 15px 15px 15px 15px;
+	width: 100%;
+	border-bottom: 1px solid #383838;
+	border-top-left-radius: .25rem;
+	border-top-right-radius: .25rem;
+	opacity: 1;
+	transition: opacity 0.1s ease, background-color 0.1s ease;
+	;
 }
 
-.image-container img {
-	display: block;
+.custom-formfield:hover {
+	opacity: 1;
+	background-color: #ebebeb;
+}
+
+.custom-selected {
+	transition: background-color 0.3s ease;
+}
+
+.custom-selected:hover .card-body {
+	background-color: rgb(138, 155, 171);
+}
+
+.custom-selected:hover .image-container .btn-position {
+	background-color: rgba(0, 0, 0, 0.2);
+	box-shadow: 0px 4px 8px 0px black;
+	border: 1px solid white;
+}
+
+.image-container .btn-position {
+	transition: background-color 0.3s ease;
 }
 
 .btn-position {
@@ -14,36 +40,15 @@
 }
 
 .search-bar {
-
 	position: relative;
 }
 
 .search-bar .fa-search {
-
 	position: absolute;
-	top: 20px;
-	left: 20px;
+	top: 15px;
+	left: 30px;
 	color: #9ca3af;
 
-}
-
-.search-bar span {
-
-	position: absolute;
-	right: 17px;
-	top: 13px;
-	padding: 2px;
-	border-left: 1px solid #d1d5db;
-
-}
-
-.left-pan {
-	padding-left: 7px;
-}
-
-.left-pan i {
-
-	padding-left: 10px;
 }
 
 .form-input {
