--- a/FRONTEND/src/app/module/reccer/event/event.component.html
+++ b/FRONTEND/src/app/module/reccer/event/event.component.html
@@ -1,53 +1,152 @@
-<div class="container border border-primary" style="height: 500px;">
-	<div class="d-flex flex-row w-100 justify-content-center">
-		<div class="fs-3 p-4 m-auto">ALL EVENTS</div>
+<div class="container border border-primary">
+	<div class="d-flex flex-row w-100 mt-4 justify-content-center">
+		<div class="fs-3 p-4 m-auto fw-bold">ALL EVENTS</div>
 	</div>
-	<div class="border border-secondary h-100 d-flex flex-row">
-		<div class=" w-75 border border-dark" style="height: 500px;">
+	<div class="h-100 d-flex flex-row">
+		<div class="w-75 ">
 			<div class="row height d-flex justify-content-center align-items-center py-2">
-				<div class="search-bar">
-					<i class="fa fa-search ms-2" style="font-size: 17px;"></i>
+				<div class="search-bar d-flex align-items-center">
+					<i class="fa fa-search fs-3" style="font-size: 17px;"></i>
 					<input type="text" [formControl]="this.searchFormControl"
-						class="form-control form-input border border-dark rounded-5" placeholder="Search event name...">
+						class="ps-4 form-control form-input border border-dark rounded-5"
+						placeholder="Search event name...">
 				</div>
 			</div>
-			<div class="border border-info" style="height: 500px;">
-				<!-- for ... -->
-				<div class="border border-primary card m-2 bg-secondary text-white" style="width: 30%; height: 300px;">
-					<!-- <div class="container card-img-top h-50 w-100">
-						<div class="image-container w-100">
-							<img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg"
-								alt="Sample Image" class="card-img-top w-100">
-							<button class="btn btn-primary btn-position">Button</button>
-						</div>
-					</div> -->
-					<div class="h-50">
-						<img src="https://letsenhance.io/static/73136da51c245e80edc6ccfe44888a99/1015f/MainBefore.jpg"
-							class="card-img-top h-100" alt="...">
-						<!-- <button class="btn btn-primary btn-position">Button</button> -->
-						<button class="btn btn-primary btn-position" mat-icon-button>
-							<mat-icon>more_vert</mat-icon>
-						</button>
-					</div>
-					<div class="card-body" style="max-height: 150px; overflow: auto;">
-						<h3>Event Name</h3>
-						<h3>Recruiter Name</h3>
-						<h6 class="card-subtitle mb-2 text-muted" style="font-size: 15px;">Card subtitleeeeeee</h6>
-						<p class="card-text">Description</p>
-						<p class="card-text">Place</p>
-						<p class="card-text">Start Date - End Date</p>
-						<p class="card-text">Max Participants</p>
-						<!-- <a href="#" class="card-link">Card link</a>
-						<a href="#" class="card-link">Another link</a> -->
+			<div class="px-2 mt-2 row align-items-center">
+				<div class="col"><button mat-raised-button color="primary" (click)="openAddFormDialog('100ms', '0ms')"
+						class="fs-5 py-2"><i class="bi bi-plus-circle fs-4"></i> Add
+						new
+						event</button></div>
+				<div class="col d-flex justify-content-center">
+					<div class="fs-4">
+						Result Count: {{this.fetchedEvents?.length}}
 					</div>
 				</div>
+				<div class="col d-flex justify-content-end align-items-center">
+					<div class="fs-4">Sort:</div>
+					<select class="ms-2 form-select border-1 border-dark shadow" style="width: fit-content;"
+						[formControl]='this.sortString' [value]="this.sortString" aria-label="Default select example">
+						<option class="p-2" selected value="EventName_ASC">Name (A-Z)</option>
+						<option class="p-2" value="EventName_DESC">Name (Z-A)</option>
+						<option class="p-2" value="StartDateTime_DESC">Start Date (Newest)</option>
+						<option class="p-2" value="StartDateTime_ASC">Start Date (Oldest)</option>
+					</select>
+				</div>
+				<!-- <button mat-raised-button color="primary" class="fs-5 py-2"><i class="bi bi-plus-circle fs-4"></i> Add
+					new
+					event</button>
+				<div class="d-flex ms-auto flex-row justify-content-center fs-4">
+					Result count: {{this.fetchedEvents?.length}}
+				</div> -->
+			</div>
+
+			<!-- <div class="fs-4">Result count: {{this.fetchedEvents?.length}}</div> -->
+			<div class="d-flex flex-wrap mt-2" style="height: 550px; overflow-y: auto;">
+				<!-- for ... -->
+				@for (event of this.fetchedEvents; track event) {
+				<div class="border border-primary card text-white custom-selected"
+					style="width: 30%; height: 430px; margin: 15px; background: lightslategrey; box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.4);">
+					<div class="h-50 image-container">
+						<img src="{{event.imageURL}}" class="card-img-top h-100" alt="Event image">
+						<button class="btn-position" [matMenuTriggerFor]="menu" mat-icon-button>
+							<mat-icon>menu</mat-icon>
+						</button>
+						<mat-menu #menu="matMenu">
+							<button mat-menu-item class="fs-4" [routerLink]="['/events/detail', event.eventId]">
+								<i class="bi bi-info-square" style="color: rgb(0, 101, 177);"></i> Detail
+							</button>
+							<button mat-menu-item class="fs-4"
+								[disabled]="isHappenning(event.startDateTime, event.endDateTime)"
+								(click)="openEditFormDialog(event, '100ms', '0ms')">
+								<i class="bi bi-pencil" style="color: darkgoldenrod;"></i> Edit
+							</button>
+							<button (click)="openQRCodeDialog(event, '100ms', '0ms')" mat-menu-item class="fs-4">
+								<i class="bi bi-qr-code-scan"></i> Open
+							</button>
+							<button mat-menu-item [disabled]="isHappenning(event.startDateTime, event.endDateTime)"
+								(click)="openDeleteFormDialog(event, '100ms', '0ms')">
+								<i class="bi bi-trash3-fill" style="color: red;"></i> Delete
+							</button>
+						</mat-menu>
+
+					</div>
+					<div class="card-body h-50 "
+						style="max-height: 215px; overflow: auto; font-size: 17px; line-height: 24px;">
+						<div class="card-text fs-4">{{event.eventName}}</div>
+						<div class="card-text mt-1">By {{event.recruiter?.user?.fullName}}</div>
+						<!-- <h6 class="card-subtitle mb-2 text-muted" style="font-size: 15px;">Card subtitleeeeeee</h6> -->
+						<div class="card-text mt-2">{{event.description | lowercase}} </div>
+						<div class="card-text"><i class="bi bi-building" style="color: lightgreen"></i>
+							{{event.place}}
+						</div>
+						<div class="card-text "><i class="bi bi-alarm" style="color: yellow"></i>
+							{{event.startDateTime| date:'HH:mm'}} - {{event.endDateTime |
+							date:'HH:mm'}}
+						</div>
+						<div class="card-text "><i class="bi bi-calendar-week" style="color: rgb(255, 77, 77)"></i>
+							{{event.startDateTime| date:'dd/MM/yyyy'}} - {{event.endDateTime |
+							date:'dd/MM/yyyy'}}
+						</div>
+						<div class="card-text "><i class="bi bi-people" style="color: lightblue;"></i>
+							{{event.maxParticipants}}</div>
+						<!-- <a href="#" class="card-link">View Details</a>
+						<a href="#" class="card-link">Delete</a> -->
+					</div>
+				</div>
+				}
 				<!-- end for -->
 			</div>
 		</div>
-		<div class="border border-info w-25" style="height: 100px;">
+		<div class="w-25 mt-2">
 			<div style="width: 100%;" class="d-flex flex-row justify-content-center">
-				<div class="fs-4 p-4 m-auto">FILTER</div>
+				<div class="fs-4 p-4 m-auto fw-bold">FILTER</div>
 			</div>
+			<form class="p-4 mx-2 rounded-4 mt-1" style="background: linear-gradient(to right, #1732c8, #f32929);"
+				[formGroup]="
+				this.filterForm">
+
+				<mat-form-field class="mt-4" style="width: 100%;">
+					<mat-label>Date</mat-label>
+					<mat-date-range-input [rangePicker]="picker">
+						<input matStartDate oninput="this.value=this.value.replace(/[^0-9\/]/g,'')"
+							formControlName="fromDate" placeholder="From date" #fromDatePicker>
+						<input matEndDate oninput="this.value=this.value.replace(/[^0-9\/]/g,'')"
+							formControlName="toDate" placeholder="To date" #toDatePicker>
+					</mat-date-range-input>
+					@if( fromDatePicker.value || toDatePicker.value){
+					<button (click)="fromDatePicker.value=''; toDatePicker.value='' ;
+					this.filterForm.get('fromDate')?.setValue(null); this.filterForm.get('toDate')?.setValue(null)" mat-icon-button>
+						<mat-icon style="color: red;">delete</mat-icon>
+					</button>
+					}
+					<mat-hint style="font-size: 13px; font-weight: 500; color: white;">DD/MM/YYYY –
+						DD/MM/YYYY</mat-hint>
+					<mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+					<mat-date-range-picker #picker></mat-date-range-picker>
+				</mat-form-field>
+
+				<div class="mt-3 mb-4 custom-formfield">
+					<mat-label style="font-size: 18px;">Max Participants:</mat-label>
+					<div class="d-flex flex-row mt-2">
+						<mat-form-field>
+							<input matInput type="number" [value]="this.filterForm.get('fromMaxParticipants')?.value"
+								(change)="this.setValue($event, 'fromMaxParticipants')" />
+						</mat-form-field>
+						<mat-form-field>
+							<input matInput type="number" [value]="this.filterForm.get('toMaxParticipants')?.value"
+								(change)="this.setValue($event, 'toMaxParticipants')" />
+						</mat-form-field>
+					</div>
+
+					<mat-slider discrete="true" style="width: 95%;" min="0" [max]="this.MAX_MAX_PARTICIPANTS_CONST + 1"
+						step=" 10">
+						<input [formControl]="getMyControl('fromMaxParticipants')" matSliderStartThumb
+							#fromMaxHiringQtySlider />
+						<input [formControl]="getMyControl('toMaxParticipants')" matSliderEndThumb
+							#toMaxHiringQtySlider />
+					</mat-slider>
+				</div>
+			</form>
 		</div>
 	</div>
 </div>
