--- a/FrontEnd/src/app/module/position/position.component.html
+++ b/FrontEnd/src/app/module/position/position.component.html
@@ -37,7 +37,7 @@
 				@for (position of fetchedPositions; track position) {
 				<div class="d-flex flex-row rounded-4 hover-overlay my-2"
 					style="padding: 10px 10px 10px 10px; width: 100%; background-color: rgb(230, 241, 250); border: 1px solid rgb(134, 134, 232);">
-					<div style="width: 15%;">
+					<div class="ms-4" style="width: 15%;">
 						<img src="{{position.company?.logo}}" class="rounded-4" style="width: 120px; height: 120px;"
 							alt="{{position.company?.companyName + ' logo'}}">
 					</div>
